# unxorer

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Folder.DotSettings  LICENSE.txt  README.md  ida-plugin.json  vcpkg.json
.github/workflows/: build.yml
assets/: icon.psd
src/: branch_manager.hpp  console.cpp  emulator.cpp  emulator.hpp  global.hpp  handler.cpp  handler.hpp  instruction_classifier.hpp  logger.hpp  plugin.cpp  register_mapper.hpp  results.cpp  results.hpp  seh_support.hpp  string_result.hpp  strings.hpp  vector_operations.hpp
